@@ -8,6 +8,7 @@ Key:
 
 Version 1.6.12 | Tested on CB 1.6.2-R0.1 and mcMMO 1.4.07
  + Added hardcore death penalty prevention! Disable stat loss in certain WorldGuard regions
+ + Added feature which prevents repairing high-level enchanted items
  + Added config reload command; /tftaddon reload
  ! Updated Metrics
  = Fixed minor typo in /tfthelp
